OBS-FTBO-0141: refractor Columnas de contrato para dar cese